--- a/src/app/components/about/about.scss
+++ b/src/app/components/about/about.scss
@@ -14,7 +14,7 @@
     right: 100px;
     bottom: 100px;
     height:200px;
-    background-color: #fff;
+    background-color: #eee;
   }
 
   .Overlay {
